--- a/puzzle.html
+++ b/puzzle.html
@@ -10,10 +10,11 @@
 <meta name="author" content="Dhiraj kumar" />
 <meta name="copyright" content="css-jquery-design.com" />
 <link href="css/puzzle.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <header>
-  <h2>N-puzzle Solver </h2>
+  <h2>N-puzzle Solver <button class="btn">TEST</button></h2>
 </header>
 
 <!-- This is where the game will be included -->
