--- a/puzzle.html
+++ b/puzzle.html
@@ -14,7 +14,8 @@
 </head>
 <body>
 <header>
-  <h2>N-puzzle Solver <button class="btn">TEST</button></h2>
+  <h2>N-puzzle Solver</h2>
+  <h3><button class="btn btn-info">TEST</button></h3>
 </header>
 
 <!-- This is where the game will be included -->
