--- a/puzzle.html
+++ b/puzzle.html
@@ -15,7 +15,17 @@
 <body>
 <header>
   <h2>N-puzzle Solver</h2>
-  <h3><button class="btn btn-info">TEST</button></h3>
+  <h3>
+    <select>
+	  <option value=3>3</option>
+	  <option value=4>4</option>
+	  <option value=5>5</option>
+	  <option value=6>6</option>
+	  <option value=7>7</option>
+	  <option value=8>8</option>
+    </select>
+    <button class="btn btn-info">TEST</button>
+  </h3>
 </header>
 
 <!-- This is where the game will be included -->
