--- a/puzzle.html
+++ b/puzzle.html
@@ -15,7 +15,8 @@
 <body>
 <header>
   <h2>N-puzzle Solver</h2>
-  <h3>
+  <div class="form-group">
+    <h3>
     <select>
 	  <option value=3>3</option>
 	  <option value=4>4</option>
@@ -25,7 +26,8 @@
 	  <option value=8>8</option>
     </select>
     <button class="btn btn-info">TEST</button>
-  </h3>
+    </h3>
+  </div>
 </header>
 
 <!-- This is where the game will be included -->
