--- a/puzzle.html
+++ b/puzzle.html
@@ -15,7 +15,7 @@
 <body>
 <header>
   <h2>N-puzzle Solver</h2>
-  <div class="form-group">
+  <div class="form-group pull-center">
     <h3>
     <select>
 	  <option value=3>3</option>
