--- a/puzzle.html
+++ b/puzzle.html
@@ -15,18 +15,20 @@
 <body>
 <header>
   <h2>N-puzzle Solver</h2>
-  <div class="form-group pull-center">
-    <h3>
-    <select>
-	  <option value=3>3</option>
-	  <option value=4>4</option>
-	  <option value=5>5</option>
-	  <option value=6>6</option>
-	  <option value=7>7</option>
-	  <option value=8>8</option>
-    </select>
-    <button class="btn btn-info">TEST</button>
-    </h3>
+  <div class="container">
+    <div class="form-group pull-center">
+	  <h3>
+        <select>
+	      <option value=3>3</option>
+	      <option value=4>4</option>
+	      <option value=5>5</option>
+	      <option value=6>6</option>
+	      <option value=7>7</option>
+	      <option value=8>8</option>
+        </select>
+        <button class="btn btn-info">TEST</button>
+      </h3>
+    </div>
   </div>
 </header>
 
