--- a/puzzle.html
+++ b/puzzle.html
@@ -16,9 +16,9 @@
 <header>
   <h2>N-puzzle Solver</h2>
   <div class="container">
-    <div class="form-group pull-center">
+    <div class="form-group pull-center text-center col-xs-1 col-xs-offset-5">
 	  <h3>
-        <select>
+        <select class="form-control ">
 	      <option value=3>3</option>
 	      <option value=4>4</option>
 	      <option value=5>5</option>
@@ -26,7 +26,7 @@
 	      <option value=7>7</option>
 	      <option value=8>8</option>
         </select>
-        <button class="btn btn-info">TEST</button>
+        <button class="btn btn-info">Ανακάτεψε</button>
       </h3>
     </div>
   </div>
