--- a/puzzle.html
+++ b/puzzle.html
@@ -40,7 +40,7 @@
 <script src="js/puzzle-dg.min.js"></script> 
 <script type="text/javascript">$(window).on('load',function(){
     $('#game_area').puzzle_dg(60);
-	$("#selection").change(function(){alert("a");});
+	$("#selection").change(function(){alert($(this).val());});
 });</script>
 </body>
 </html>
