--- a/puzzle.html
+++ b/puzzle.html
@@ -44,7 +44,7 @@
 	   var selection = $(this).val();
 	   $("#game_area").css("width", selection * 60).css("height", selection * 60);
 	   $("#board div").css("background", "url('/images/grid7x7.png') no-repeat scroll 0 0 #ffffff");
-	   #game_area').puzzle_dg(60);
+	   $('#game_area').puzzle_dg(60);
 	});
 });</script>
 </body>
