--- a/puzzle.html
+++ b/puzzle.html
@@ -39,7 +39,7 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/puzzle-dg.js"></script> 
 <script type="text/javascript">$(window).on('load',function(){
-    $('#game_area').puzzle_dg(60);
+    //$('#game_area').puzzle_dg(60);
 	$("#selection").change(function(){
 	   var selection = $(this).val();
 	   $("#game_area").css("width", selection * 60).css("height", selection * 60);
