--- a/puzzle.html
+++ b/puzzle.html
@@ -43,7 +43,7 @@
 	$("#selection").change(function(){
 	   var selection = $(this).val();
 	   $("#game_area").css("width", selection * 60).css("height", selection * 60);
-	   $("#board div").css("background", "url('/images/grid' + selection + 'x' + selection + '.png') no-repeat scroll 0 0 #ffffff");
+	   $("#board div").css("background", "url('/images/grid" + selection + "x" + selection + ".png") no-repeat scroll 0 0 #ffffff");
 	   $('#game_area').puzzle_dg(60);
 	});
 });</script>
