--- a/puzzle.html
+++ b/puzzle.html
@@ -43,7 +43,7 @@
 	$("#selection").change(function(){
 	   var selection = $(this).val();
 	   $("#game_area").css("width", selection * 60).css("height", selection * 60);
-	   $("#board div").css("background", "url('/images/grid7x7.png') no-repeat scroll 0 0 #ffffff");
+	   $("#board div").removeClass().addClass("x"+selection);
 	   $('#game_area').puzzle_dg(60);
 	});
 });</script>
