--- a/puzzle.html
+++ b/puzzle.html
@@ -1,51 +1,157 @@
+<!doctype html>
 
-<!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="author" content="Dhiraj kumar" />
-<title>How to create a puzzle game using jQuery</title>
-<meta name="description" content="How to create a puzzle game using jQuery" />
-<meta name="keywords" content="puzzle, css3, animation, css animation, jquery, plugin, game, browser" />
-<meta name="author" content="Dhiraj kumar" />
-<meta name="copyright" content="css-jquery-design.com" />
-<link href="css/puzzle.css" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="utf-8">
+
+  <title>N-puzzle Solver</title>
+  <meta name="description" content="N-puzzle solver">
+  <meta name="author" content="Manolis Mimilidis">
+
+  <link rel="stylesheet" href="/opengov/bootstrap/css/bootstrap.min.css">
+  <style>
+    td{
+		width:60px;
+		height: 60px;
+		vertical-align: middle!important;
+	}
+	.table{
+		width:auto!important;
+	}
+	.next {
+	  height:100%;
+	  width:100%;
+	}
+  table.center {
+    margin-left:auto; 
+    margin-right:auto;
+  }
+  body {text-align:center;}
+  </style>
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
+
 <body>
-<header>
-  <h2>N-puzzle Solver</h2>
-  <div class="container"> 
-    <div class="form-group pull-center text-center col-xs-1 col-xs-offset-5">
-	  <h3>
-        <select id="selection" class="form-control ">
-	      <option value=3>3</option>
-	      <option value=4>4</option>
-	      <option value=5>5</option>
-	      <option value=6>6</option>
-	      <option value=7>7</option>
-	      <option value=8>8</option>
-        </select>
-        <button class="btn btn-info">Ανακάτεψε</button>
-      </h3>
-    </div>
-  </div>
-</header>
+  <select id="selectno" onchange="mix();">
+    <option>2</option>
+    <option selected="selected">3</option>
+    <option>4</option>
+    <option>5</option>
+    <option>6</option>
+    <option>7</option>
+    <option>8</option>
+    <option>9</option>
+    <option>10</option>
+  </select>
+  <button class="btn btn-primary" onclick="mix()">Ανακάτεψε</button>
+  <div id="puzzle" class="container"></div>
+  <div id="info1">TEST</div>
+  <div id="info2">TEST</div>
+  <?php 
+echo "test php";
+?>
+  <script src="/opengov/jquery/jquery.min.js"></script>
+  <script>
+    var tiles = [];
+	var empty = {col:1,row:1};
+	function getno(){
+	  return $("#selectno").val();
+	}
+    function mix(){
+      var no = getno(),
+         col = 1,
+           i,
+           j;
+	  empty.col = no;
+	  empty.row = no;
 
-<!-- This is where the game will be included -->
-<div id="game_area"></div>
+      tiles = [];
+       $("#puzzle").html("");
+      for (i = 1; i <= no; i++){
+        for(j = 1; j <= no ; j++){
+		  if (!((i==no)&&(j==no)))
+            tiles.push((i-1) * no + j);
+        }
+      }
+	    
+      shuffle(tiles);
+	  var currentRow;
+	  $("#puzzle").append($('<table />', {id:'puzzletable', class:"table table-condensed table-responsive table-bordered text-center center"}));
+	  $("#puzzletable").append($('<tbody/>'));
+	  $.each(tiles, function(i, item){
+		  currentRow = Math.floor(i/no)+1;
+		  if (i%no === 0)
+			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
+	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:(i%no)+1}));	  
+		  $("td[col="+((i%no)+1)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item	}));
+	    }
+	  );
+	  $("#tr"+currentRow).append($('<td />', {row:currentRow, col:no}));
+	  fixnear();
+	  var info = "Manhattan distance= "+manhattan();
+      $("#info2").text(info);
+    }
+	function fixnear(){
+	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	}
+	function unfixnear(){
+	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	}	
+	function manhattan(){
+	  var res = 0;
+	  $("#puzzletable td button").each(function(i, item){
+		 var nm = parseInt($(item).text())-1;
+		 var pos = i;
+		 var no = getno();
+		 var pos_col = (pos%no)+1;
+		 var pos_row = Math.floor(pos/no)+1;
+		 var nm_col = (nm%no)+1;
+		 var nm_row = Math.floor(nm/no)+1;
+		 res += Math.abs(nm_col-pos_col)+Math.abs(nm_row-pos_row);
+	  });
+	  return res;
+	}
+	function clickme(){
+	  unfixnear();
+	  var row=$(this).parent().attr("row");
+	  var col=$(this).parent().attr("col");
+	  var element = $(this).detach().appendTo($("td[col="+empty.col+"][row="+empty.row+"]"));
+	  empty.col = parseInt(col);
+	  empty.row = parseInt(row);
+	  fixnear();
+	  var info = tiles.join(", ");
+      $("#info1").text(info);
+	}
+    function shuffle(array) {
+      var currentIndex = array.length, temporaryValue, randomIndex;
 
-<!-- java scripts --> 
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/puzzle-dg.js"></script> 
-<script type="text/javascript">$(window).on('load',function(){
-    //$('#game_area').puzzle_dg(60);
-	$("#selection").change(function(){
-	   var selection = $(this).val();
-	   $("#game_area").css("width", selection * 60).css("height", selection * 60);
-	   $('#game_area').puzzle_dg(60);
-	   $("#board div").removeClass().addClass("x"+selection);
-	});
-});</script>
+  // While there remain elements to shuffle...
+  while (0 !== currentIndex) {
+
+    // Pick a remaining element...
+    randomIndex = Math.floor(Math.random() * currentIndex);
+    currentIndex -= 1;
+
+    // And swap it with the current element.
+    temporaryValue = array[currentIndex];
+    array[currentIndex] = array[randomIndex];
+    array[randomIndex] = temporaryValue;
+  }
+  var info = array.join(", ");
+  $("#info1").text(info);
+  return array;
+}
+$(function() {
+  mix();
+});
+</script>
 </body>
 </html>
