--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/puzzle-dg.js"></script> 
 <script type="text/javascript">$(window).on('load',function(){
-    startGame(selection);
+    startGame();
 	$("#selection").change(function(){
 	   startGame();
 	});
