--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 $(function(){
     startGame();
 	$("#selection").change(startGame);
-	$("#shuffle").click(shuffle);
+	$("#shuffle").click(mix);
 });
 </script>
 </body>
