--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!-- This is where the game will be included -->
 <div id="game_area"></div>
-
+<div id="info1"></div>
 <!-- java scripts --> 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/puzzle-dg.js"></script> 
