--- a/panos.html
+++ b/panos.html
@@ -11,5 +11,11 @@
 </head>
 <body>
 <canvas id="myCanvas" width="500" height="300">
+ your browser doesn't support canvas!
+</canvas>
+<script>
+var context = canvas.getContext('2d');
+context.fillStyle = 'red';
+</script>
 </body>
 </html>
