--- a/panos.html
+++ b/panos.html
@@ -16,6 +16,11 @@
 <script>
 var context = canvas.getContext('2d');
 context.fillStyle = 'red';
+var imageObj = new Image();
+imageObj.onload = function() {
+  context.drawImage(imageObj, x, y);
+};
+imageObj.src = 'images/grid4x4.png';
 </script>
 </body>
 </html>
