--- a/panos.html
+++ b/panos.html
@@ -14,6 +14,7 @@
  your browser doesn't support canvas!
 </canvas>
 <script>
+var canvas = document.getElementById("myCanvas");
 var context = canvas.getContext('2d');
 context.fillStyle = 'red';
 var imageObj = new Image();
