--- a/panos.html
+++ b/panos.html
@@ -16,12 +16,14 @@
 <script>
 var canvas = document.getElementById("myCanvas");
 var context = canvas.getContext('2d');
+window.onload = function() {
 context.fillStyle = 'red';
 var imageObj = new Image();
 imageObj.onload = function() {
   context.drawImage(imageObj, x, y);
 };
 imageObj.src = 'images/grid4x4.png';
+}
 </script>
 </body>
 </html>
