--- a/panos.html
+++ b/panos.html
@@ -20,10 +20,10 @@ window.onload = function() {
 context.fillStyle = 'red';
 var imageObj = new Image();
 imageObj.onload = function() {
-  context.drawImage(imageObj, x, y);
+  context.drawImage(imageObj, 20, 20);
 };
 imageObj.src = 'images/grid4x4.png';
-}
+}	
 </script>
 </body>
 </html>
