--- a/panos.html
+++ b/panos.html
@@ -20,7 +20,7 @@ window.onload = function() {
 context.fillStyle = 'red';
 var imageObj = new Image();
 imageObj.onload = function() {
-  context.drawImage(imageObj, 20, 20);
+  context.drawImage(imageObj,90,130,50,60,10,10,50,60);
 };
 imageObj.src = 'images/grid4x4.png';
 }	
