--- a/panos.html
+++ b/panos.html
@@ -19,6 +19,7 @@ var context = canvas.getContext('2d');
 window.onload = function() {
 context.fillStyle = 'red';
 var imageObj = new Image();
+var images = [];
 imageObj.onload = function() {
   context.drawImage(imageObj,0,0,60,60,0,0,60,60);
 };
