--- a/panos.html
+++ b/panos.html
@@ -8,6 +8,7 @@
 <meta name="author" content="Mimilidis Manolis" />
 <link href="css/puzzle.css" rel="stylesheet">
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 <canvas id="myCanvas" width="500" height="300">
