--- a/panos.html
+++ b/panos.html
@@ -11,6 +11,9 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
+<header>
+<h1>This is a header</h1>
+</header>
 <canvas id="myCanvas" width="240" height="240">
  your browser doesn't support canvas!
 </canvas>
