--- a/panos.html
+++ b/panos.html
@@ -14,9 +14,24 @@
 <header>
 <h1>This is a header</h1>
 </header>
+<nav>
+<h2>This is a nav</h2>
+</nav>
+<section>
+<h2>This is a section</section>
 <canvas id="myCanvas" width="240" height="240">
  your browser doesn't support canvas!
 </canvas>
+
+</section>
+
+<aside>
+<h2>This is a aside</h2>
+</aside>
+<footer>
+<h2>This is a footer</h2>
+</footer>
+
 <script src="js/panos.js"></script>
 </body>
 </html>
