--- a/test.html
+++ b/test.html
@@ -20,6 +20,8 @@
 		  .board{
 		    width:180px;
 			height:180px;
+			opacity: 0.2;
+            filter: alpha(opacity=20);
 		  }
 		  .row0{
 		    background-position-y:0px;
