--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="N puzzle Solver" />
 		<meta name="keywords" content="N-puzzle, game" />
 		<meta name="author" content="Mimilidis Manolis" />
-		<link href="css/puzzle.css" rel="stylesheet">
+		<!--link href="css/puzzle.css" rel="stylesheet"-->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<style>
