--- a/test.html
+++ b/test.html
@@ -62,5 +62,13 @@
 				<div class="tile row2 col2"></div>
 			</div>
 		</section>
+	<script type="text/javascript">
+		$(function(){
+			$(".tile").click(clicktile);
+		});
+		clicktile(){
+		  alert("1");
+		}
+</script>
 	</body>
 </html>
