--- a/test.html
+++ b/test.html
@@ -66,7 +66,7 @@
 		$(function(){
 			$(".tile").click(clicktile);
 		});
-		function clicktile(){
+		function clicktile(e){
 		  alert("1");
 		}
 </script>
