--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
 			$(".tile").click(clicktile);
 		});
 		function clicktile(e){
-		  alert("1");
+		  $(this).detach();
 		}
 </script>
 	</body>
