--- a/test.html
+++ b/test.html
@@ -51,15 +51,15 @@
 		<section>
 			<h2>This is a section</h2>
 			<div class="board x3">
-				<div class="tile row0 col0"></div>
-				<div class="tile row0 col1"></div>
-				<div class="tile row0 col2"></div>
-				<div class="tile row1 col0"></div>
-				<div class="tile row1 col1"></div>
-				<div class="tile row1 col2"></div>
-				<div class="tile row2 col0"></div>
-				<div class="tile row2 col1"></div>
-				<div class="tile row2 col2"></div>
+				<div class="tile row0 col0" row=0 col=0></div>
+				<div class="tile row0 col1" row=0 col=1></div>
+				<div class="tile row0 col2" row=0 col=2></div>
+				<div class="tile row1 col0" row=1 col=0></div>
+				<div class="tile row1 col1" row=1 col=1></div>
+				<div class="tile row1 col2" row=1 col=2></div>
+				<div class="tile row2 col0" row=2 col=0></div>
+				<div class="tile row2 col1" row=2 col=1></div>
+				<div class="tile row2 col2" row=2 col=2></div>
 			</div>
 		</section>
 	<script type="text/javascript">
