--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <div id="game_area"></div>
 <div id="info1"></div>
 <div id="info2"></div>
+<div id="info3"></div>
 <!-- java scripts --> 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/puzzle-dg.js"></script> 
